# mcp-desktop-app

mcp-desktop-app/: CLAUDE.md  README.md  package-lock.json  package.json
mcp-desktop-app/src/: App.css  App.tsx
mcp-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
mcp-desktop-app/src-tauri/src/: lib.rs  main.rs
mcp-desktop-app/src-tauri/src/application/: commands.rs  state.rs
mcp-desktop-app/src-tauri/src/domain/: json_rpc.rs  mcp_types.rs  mod.rs
mcp-desktop-app/src-tauri/src/infrastructure/: mcp_client.rs  mcp_transport.rs  mod.rs  proper_mcp_client.rs  stdio_transport.rs
mcp-desktop-app/src/components/: ApplicationScopeDialog.tsx  ChatInterface.tsx  ConnectionStatus.tsx  SettingsPage.tsx  ToolsList.tsx  UpdateSetDialog.tsx
mcp-desktop-app/src/services/: llm.ts  settings.ts
mcp-desktop-app/src/types/: mcp.ts
